force-app/main/default/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF(
   AND(
       MONTH(DATEVALUE(CreatedDate))&gt;7,
       MONTH(DATEVALUE(CreatedDate))&lt;13
       ),
   TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;/&quot;&amp;TEXT(CreatedDate_plus_1__c),
   TEXT(CreatedDate_minus_1__c)&amp;&quot;/&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate)))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_Calendar__c</fullName>
        <formula>HYPERLINK(&quot;00U%2Fe%3F%26RecordType%3D0126F000001hVzy%26ent%3DEvent%26evt5%3Dtest%26save%3D1&amp;who=Owner:User.Id&quot;
,  
&quot;Add to Calendar&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_on_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you disagree with the amount of hours to complete this task.</inlineHelpText>
        <label>Disagree on Hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_to_School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Category__c</fullName>
        <description>Copies the value from the standard &apos;Subject&apos; field for attendance records. This field is solely used in attendance reports containing charts so that specific colours can be assigned to each picklist value (not available in the standard field)</description>
        <label>Attendance Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                    <color>#33FF33</color>
                    <label>Present</label>
                </value>
                <value>
                    <fullName>Late</fullName>
                    <color>#FFFF66</color>
                    <label>Late</label>
                </value>
                <value>
                    <fullName>Authorised Absence</fullName>
                    <color>#FF0000</color>
                    <label>Authorised Absence</label>
                </value>
                <value>
                    <fullName>Unauthorised Absence</fullName>
                    <color>#990000</color>
                    <label>Unauthorised Absence</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                    <color>#FFCC33</color>
                    <label>Partial</label>
                </value>
                <value>
                    <fullName>External Activity</fullName>
                    <color>#33CCFF</color>
                    <label>External Activity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Code_Hub__c</fullName>
        <description>Used when exporting data from SF for upload to Hub</description>
        <formula>CASE(
     Subject,  
     &quot;-&quot;, &quot;&quot;,
     &quot;Present&quot;, &quot;/&quot;,
     &quot;Late&quot;, &quot;L&quot;,
     &quot;Absent&quot;, &quot;C&quot;,
     &quot;Authorised Absence&quot;, &quot;C&quot;,
     &quot;Unauthorised Absence&quot;, &quot;O&quot;,
     &quot;Partial&quot;, &quot;P&quot;,
     &quot;External Activity&quot;, &quot;V&quot;,
     &quot;&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Code (Hub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Date_Hub__c</fullName>
        <description>Used when exporting data from SF for upload to Hub</description>
        <formula>TEXT(YEAR(ActivityDate))

&amp;&quot;-&quot;&amp;

IF(
   LEN(TEXT(MONTH(ActivityDate)))=1,
   &quot;0&quot;&amp;TEXT(MONTH(ActivityDate)),
   TEXT(MONTH(ActivityDate))
   )

&amp;&quot;-&quot;&amp;

IF(
   LEN(TEXT(DAY(ActivityDate)))=1,
   &quot;0&quot;&amp;TEXT(DAY(ActivityDate)),
   TEXT(DAY(ActivityDate))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Date (Hub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Formatted_Date__c</fullName>
        <description>formatted date for the day on which attendance is taken in createdby user context</description>
        <inlineHelpText>formatted date for the day on which attendance is taken in createdby user context</inlineHelpText>
        <label>Attendance Formatted Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Record_School__c</fullName>
        <formula>TEXT ( CreatedBy.School__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Record School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                    <default>true</default>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_minus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate_plus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>IsChild

/*AND(
    RecordType.DeveloperName = &quot;Attendance&quot;,
    LEFT(Student_ID_Hub__c, 1) = &quot;9&quot;
    )*/

/*AND(
    RecordType.DeveloperName = &quot;Attendance&quot;,
    Student_Group_Type__c = &quot;Tutor Group&quot;,
    OR(
       Student_Group_School__c = &quot;The British International School of Kuala Lumpur&quot;,
       Attendance_Record_School__c = &quot;The British International School of Kuala Lumpur&quot;
       )
    )*/

/*AND(
    RecordType.DeveloperName = &quot;Attendance&quot;,
    OR(
       Student_Group_School__c = &quot;The British International School of Kuala Lumpur&quot;,
       Attendance_Record_School__c = &quot;The British International School of Kuala Lumpur&quot;
       )
    )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Date__c</fullName>
        <description>Defines the display format for attendance record in the parent portal based on the user locale of the person creating the record</description>
        <formula>IF($User.Is_US_Locale__c = TRUE, 

Display_Month__c&amp;&quot; &quot;&amp; TEXT(DAY(ActivityDate)) &amp;&quot;, &quot;&amp;TEXT(YEAR(ActivityDate)), 

TEXT(DAY(ActivityDate))&amp;&quot; &quot;&amp;Display_Month__c&amp;&quot; &quot;&amp;TEXT(YEAR(ActivityDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Month__c</fullName>
        <formula>CASE(MONTH(ActivityDate), 

1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>IF(
   AND( 
       $User.Is_US_Locale__c = TRUE,
       Subject = &quot;Authorised Absence&quot;
       ),
   &quot;Authorized Absence&quot;,
   IF(
      AND( 
          $User.Is_US_Locale__c = TRUE,
          Subject = &quot;Unauthorised Absence&quot;
          ),
      &quot;Unauthorized Absence&quot;,
      Subject
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/apex/CopyEventPageEdit?id=&quot; +Id+&quot;&amp;returl=/apex/AddToCalendar?id=&quot;&amp;Related_Enquiry__r.Id&amp;&quot;cancelurl=/apex/AddToCalendar?id=&quot;&amp;Related_Enquiry__r.Id    ,IMAGE(&quot;https://c.ap4.content.force.com/servlet/servlet.FileDownload?file=0156F00000EyWvP&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Time__c</fullName>
        <description>Used in the &apos;Mark Visit as Complete&apos; JS button</description>
        <formula>TEXT(ActivityDateTime)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <label>First Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <label>Half Day</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsChild__c</fullName>
        <description>Used in list views as the standard &apos;IsChild&apos; field is not available directly</description>
        <formula>IsChild</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tutor_Group_Attendance__c</fullName>
        <description>Identifies an attendance record as belonging to a tutor group to be used as a filter in the relevant attendance reports</description>
        <formula>IF(TEXT(Student_Group__r.Group_Type__c) = &quot;Tutor Group&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Tutor Group Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Rateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Rateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Enquiry__c</fullName>
        <formula>Related_Enquiry__r.Number_of_Children_in_Enquiry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_1_first_time_visit_allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Populated with by means of a workflow rule to ensure that only one &apos;first time visit&apos; can be recorded against any given enquiry</description>
        <label>Only 1 first time visit allowed</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Parent__c</fullName>
        <label>Primary Parent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Developer_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Satisfaction__c</fullName>
        <label>Rate Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 Stars</fullName>
                </value>
                <value>
                    <fullName>4 Stars</fullName>
                </value>
                <value>
                    <fullName>3 Stars</fullName>
                </value>
                <value>
                    <fullName>2 Stars</fullName>
                </value>
                <value>
                    <fullName>1 Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Image__c</fullName>
        <formula>IMAGE( CASE(  Rate_Satisfaction__c , &quot;1 Star&quot;, &quot;/servlet/servlet.FileDownload?file=0156F00000EyWiX&quot;, 

&quot;2 Stars&quot;, &quot;/servlet/servlet.FileDownload?file=0156F00000EyY8d&quot;, 

&quot;3 Stars&quot;, &quot;/servlet/servlet.FileDownload?file=0156F00000EyY8i&quot;, 

&quot;4 Stars&quot;,&quot;/servlet/servlet.FileDownload?file=0156F00000EyY8n&quot;,

&quot;5 Stars&quot;,&quot;/servlet/servlet.FileDownload?file=0156F00000EyY8s&quot;,&quot;/img/samples/stars_000.gif&quot;), &quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Enquiry</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>School Visits</relationshipLabel>
        <relationshipName>School_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repeat_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if the school tour is a repeat visit in order to exclude it from the KPIs</inlineHelpText>
        <label>Repeat Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Visit_Date_for_KPIs__c</fullName>
        <label>School Visit Date (for KPIs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_of_Job__c</fullName>
        <label>Scope of Job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal or Routine</fullName>
                    <default>true</default>
                    <label>Normal or Routine</label>
                </value>
                <value>
                    <fullName>Quick and Easy</fullName>
                </value>
                <value>
                    <fullName>Major or Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                    <color>#57F17C</color>
                    <label>Present</label>
                </value>
                <value>
                    <fullName>Late</fullName>
                    <color>#FFFF66</color>
                    <label>Late</label>
                </value>
                <value>
                    <fullName>Authorised Absence</fullName>
                    <color>#FF0000</color>
                    <label>Authorised Absence</label>
                </value>
                <value>
                    <fullName>Unauthorised Absence</fullName>
                    <color>#990000</color>
                    <label>Unauthorised Absence</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                    <color>#FFCC33</color>
                    <label>Partial</label>
                </value>
                <value>
                    <fullName>External Activity</fullName>
                    <color>#33CCFF</color>
                    <label>External Activity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Group_School__c</fullName>
        <formula>Student_Group__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Group School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Group_Type__c</fullName>
        <formula>TEXT(Student_Group__r.Group_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Mirrors the value in the standard &apos;Related To&apos; field by means of a trigger. This field cannot be changed directly as it will always revert to the value shown in the &apos;Related To&apos; field. To make a change, change the value in the &apos;Related To&apos; field instead. Should not be on page layout.</description>
        <inlineHelpText>Mirrors the value in the standard &apos;Related To&apos; field by means of a trigger. This field cannot be changed directly as it will always revert to the value shown in the &apos;Related To&apos; field. To make a change, change the value in the &apos;Related To&apos; field instead.</inlineHelpText>
        <label>Student Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Attendance Records</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_ID_Hub__c</fullName>
        <description>Used when exporting data from SF for upload to Hub</description>
        <formula>Student__r.Admissions_File__r.School_Kompanion_Student_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID (Hub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <description>The student name displayed in the correct format i.e. last name, first name (nickname)</description>
        <label>Student Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Starting_Date__c</fullName>
        <label>Student Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Mirrors the value in the standard &apos;Name&apos; field by means of a trigger. This field cannot be changed directly as it will always revert to the value shown in the &apos;Name&apos; field. To make a change, change the value in the &apos;Name&apos; field instead. Should not be on page layout.</description>
        <inlineHelpText>Mirrors the value in the standard &apos;Name&apos; field by means of a trigger. This field cannot be changed directly as it will always revert to the value shown in the &apos;Name&apos; field. To make a change, change the value in the &apos;Name&apos; field instead.</inlineHelpText>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a &apos;Student Academic File&apos;.</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Student</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance Records</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <label>Test 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <label>Test 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tick_if_Present__c</fullName>
        <label>Tick if Present</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsableDueDate__c</fullName>
        <label>UsableDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_For_Overide__c</fullName>
        <label>Work For (Override)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>The British Schools Group</fullName>
                </value>
                <value>
                    <fullName>King&apos;s College Beijing</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British School of Guangzhou</fullName>
                </value>
                <value>
                    <fullName>The British School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>The King&apos;s School of Manila</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_For__c</fullName>
        <formula>IF( 

OR(TEXT(Work_For_Overide__c)=&quot;None&quot;,

TEXT(Work_For_Overide__c)=&quot;No Override&quot;), CreatedBy.CompanyName,TEXT(Work_For_Overide__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Group_Grade__c</fullName>
        <formula>Student__r.Year_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Group / Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContact_Activity_Date__c</fullName>
        <description>The field is used for iContact Pro subscription for Activity History tracking</description>
        <label>iContact Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContact_Activity_Type__c</fullName>
        <description>Is used for Activity History tracking in iContact Pro subscription</description>
        <label>iContact Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Website Visit</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xsms__Mobile_Numbers_SMS__c</fullName>
        <description>If task is of type SMS , SMS is sent to these mobile numbers.</description>
        <inlineHelpText>If task is of type SMS , SMS is sent to these mobile numbers.</inlineHelpText>
        <label>Mobile Numbers (SMS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xsms__SMS_Id__c</fullName>
        <description>xSMS Field: unique Id generated for sent SMS</description>
        <inlineHelpText>xSMS Field: unique Id generated for sent SMS</inlineHelpText>
        <label>SMS Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__SMS_Sent_Result__c</fullName>
        <description>contain Id of SMS sent in case of success SMS and in case of any error while sending SMS should contain failure message.</description>
        <inlineHelpText>contain Id of SMS sent in case of success SMS and in case of any error while sending SMS should contain failure message.</inlineHelpText>
        <label>SMS Sent Result</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Work_For__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>School_Visits_This_Week</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Assigned_to_School__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.School_Tour</value>
        </filters>
        <filters>
            <field>EVENT.START_DATE_TIME</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>IsChild__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>School Visits This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>